...
  return (
    <>
      <CustomHeader value={search} onChange={setSearch} />
      <View style={styles.container}>
        <View style={styles.titleWrapper}>
          <View>
            <Text style={styles.title}>Products</Text>
            <Text style={styles.subtitle}>
              {filtered.length} products found
            </Text>
          </View>

          <View style={styles.iconRow}>
...
