...

          <View style={{ height: 120 }} />
        </ScrollView>

        <View style={styles.buttonContainer}>
          <TouchableOpacity style={styles.cartButton}>
            <Text style={styles.cartText}>ADD TO CART</Text>
          </TouchableOpacity>
        </View>
      </View>
    </SafeAreaView>
  );
};
...
