appId: host.exp.exponent
---
# - launchApp
- assertVisible: "Products"
# - scroll
- tapOn:
    id: "product-1"
- assertVisible: "ADD TO CART"
